# struct_layout

./: Cargo.toml  readme.md
src/: lib.rs
tests/: main.rs
